# blobfinder

./: .gitignore  LICENSE  README.md  app.py  models.py  package-lock.json  package.json  pyproject.toml  run.sh
camera/: base.py  basler_camera.py  camera_types.py  discovery.py  gige_camera.py  ids_camera.py  ids_ueye_camera.py  jai_camera.py  lucid_camera.py  manager.py  opencv_camera.py  sentech_camera.py  toshiba_teli_camera.py
processors/: __init__.py  blob.py  color.py  filter.py  image_utils.py  morphology.py  morphology_utils.py  pipeline.py  registry.py  watershed.py
static/: app.js  style.css
system/: system_manager.py
templates/: index.html
