[project]
name = "blobfinder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "fastapi>=0.136.3",
    "jinja2>=3.1.6",
    "numpy==1.26.4",
    "opencv-python-headless>=4.11.0.86",
    "pip>=26.1.2",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]
